--- a/Sentiment_Analysis_using_NLP.ipynb
+++ b/Sentiment_Analysis_using_NLP.ipynb
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "b419ca0c",
+   "id": "f0fbe90e",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85876ec3",
+   "id": "d3bc1438",
    "metadata": {},
    "source": [
     "## First, training a word2vec model (with the arguments that we want) on your training sentence. Store it into the `word2vec` variable."
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "28ebbdba",
+   "id": "82dca840",
    "metadata": {},
    "source": [
     "### It's a good practice to check check the following for `X_train_pad` and `X_test_pad`:\n",
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a92c3cd0",
+   "id": "a30ae5fe",
    "metadata": {},
    "source": [
     "## Baseline Model"
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7aa5ad1c",
+   "id": "4ecccfe0",
    "metadata": {},
    "source": [
     "## The Model"
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c0a41fc",
+   "id": "08bc1025",
    "metadata": {},
    "source": [
     "## Trained Word2Vec - Transfer Learning\n"
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a01302b",
+   "id": "bfc86488",
    "metadata": {},
    "source": [
     "### The accuracy of the above the baseline model, might be quite low. By improving the quality of the embedding we can Improve accuracy of the model."
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5be37025",
+   "id": "e1e8fd7a",
    "metadata": {},
    "source": [
     "### Let's improve the quality of our embedding, instead of just loading a larger corpus, let's benefit from the embedding that others have learned. Because, the quality of an embedding, i.e. the proximity of the words, can be derived from different tasks. This is exactly what transfer learning is."
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09b33668",
+   "id": "6734ca92",
    "metadata": {},
    "source": [
     "### Listing all the different models available in the word2vec using gensim api."
@@ -594,15 +594,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b215912",
+   "id": "7f2c2888",
    "metadata": {},
    "source": [
-    "### There is a significant "
+    "### There is a significant improvement in the accuracy after Transfer learning."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 99,
    "id": "1949d6e3",
    "metadata": {},
    "outputs": [],
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 101,
    "id": "9de36bef",
    "metadata": {},
    "outputs": [
@@ -620,9 +620,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[main febec41] Sentiment Analysis using NLP\r\n",
-      " 1 file changed, 631 insertions(+)\r\n",
-      " create mode 100644 Sentiment_Analysis_using_NLP.ipynb\r\n"
+      "On branch master\r\n",
+      "Your branch is ahead of 'origin/master' by 1 commit.\r\n",
+      "  (use \"git push\" to publish your local commits)\r\n",
+      "\r\n",
+      "Untracked files:\r\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\r\n",
+      "\t\u001b[31m.DS_Store\u001b[m\r\n",
+      "\t\u001b[31mmy_model/\u001b[m\r\n",
+      "\t\u001b[31msaved_model.pb\u001b[m\r\n",
+      "\t\u001b[31m~/\u001b[m\r\n",
+      "\r\n",
+      "nothing added to commit but untracked files present (use \"git add\" to track)\r\n"
      ]
     }
    ],
@@ -632,27 +641,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "10cf2a16",
+   "execution_count": 102,
+   "id": "3b4f286a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enumerating objects: 8, done.\n",
-      "Counting objects: 100% (8/8), done.\n",
+      "Enumerating objects: 5, done.\n",
+      "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 8 threads\n",
-      "Compressing objects: 100% (6/6), done.\n",
-      "Writing objects: 100% (6/6), 5.00 KiB | 5.00 MiB/s, done.\n",
-      "Total 6 (delta 2), reused 0 (delta 0), pack-reused 0\n",
-      "remote: Resolving deltas: 100% (2/2), completed with 1 local object.\u001b[K\n",
-      "remote: \n",
-      "remote: Create a pull request for 'master' on GitHub by visiting:\u001b[K\n",
-      "remote:      https://github.com/pavankumarhm/Sentiment-Analysis-Assesment/pull/new/master\u001b[K\n",
-      "remote: \n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 2.28 KiB | 2.28 MiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To github.com:pavankumarhm/Sentiment-Analysis-Assesment.git\n",
-      " * [new branch]      master -> master\n",
+      "   febec41..2242c44  master -> master\n",
       "branch 'master' set up to track 'origin/master'.\n"
      ]
     }
@@ -664,7 +669,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9ab5ef9",
+   "id": "494c119c",
    "metadata": {},
    "outputs": [],
    "source": []
