--- a/Sentiment_Analysis_using_NLP.ipynb
+++ b/Sentiment_Analysis_using_NLP.ipynb
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "7b6b4c87",
+   "id": "4a61580c",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdeeef97",
+   "id": "6f842c43",
    "metadata": {},
    "source": [
     "## First, training a word2vec model (with the arguments that we want) on your training sentence. Store it into the `word2vec` variable."
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "129cad8a",
+   "id": "c3ec79b0",
    "metadata": {},
    "source": [
     "### It's a good practice to check check the following for `X_train_pad` and `X_test_pad`:\n",
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56a0d2dd",
+   "id": "b21cbc02",
    "metadata": {},
    "source": [
     "## Baseline Model"
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93a4c47c",
+   "id": "37dbecfc",
    "metadata": {},
    "source": [
     "## The Model"
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2d4c7ef",
+   "id": "8ce6261e",
    "metadata": {},
    "source": [
     "## Trained Word2Vec - Transfer Learning\n"
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94d13498",
+   "id": "ee633fa8",
    "metadata": {},
    "source": [
     "### The accuracy of the above the baseline model, might be quite low. By improving the quality of the embedding we can Improve accuracy of the model."
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3f2426ce",
+   "id": "51075821",
    "metadata": {},
    "source": [
     "### Let's improve the quality of our embedding, instead of just loading a larger corpus, let's benefit from the embedding that others have learned. Because, the quality of an embedding, i.e. the proximity of the words, can be derived from different tasks. This is exactly what transfer learning is."
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7badbcf5",
+   "id": "10a6fe1b",
    "metadata": {},
    "source": [
     "### Listing all the different models available in the word2vec using gensim api."
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ebbe1b4",
+   "id": "6a263f08",
    "metadata": {},
    "source": [
     "### There is a significant improvement in the accuracy after Transfer learning."
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 110,
    "id": "1949d6e3",
    "metadata": {},
    "outputs": [],
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 111,
    "id": "9de36bef",
    "metadata": {},
    "outputs": [
@@ -620,8 +620,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 7492407] Sentiment Analysis using NLP\r\n",
-      " 1 file changed, 35 insertions(+), 30 deletions(-)\r\n"
+      "On branch master\r\n",
+      "Your branch is up to date with 'origin/master'.\r\n",
+      "\r\n",
+      "Untracked files:\r\n",
+      "  (use \"git add <file>...\" to include in what will be committed)\r\n",
+      "\t\u001b[31m.DS_Store\u001b[m\r\n",
+      "\t\u001b[31mmy_model/\u001b[m\r\n",
+      "\t\u001b[31msaved_model.pb\u001b[m\r\n",
+      "\t\u001b[31m~/\u001b[m\r\n",
+      "\r\n",
+      "nothing added to commit but untracked files present (use \"git add\" to track)\r\n"
      ]
     }
    ],
@@ -631,8 +640,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
-   "id": "3ac665df",
+   "execution_count": 109,
+   "id": "2733eda4",
    "metadata": {},
    "outputs": [
     {
@@ -643,11 +652,11 @@
       "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 8 threads\n",
       "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 930 bytes | 930.00 KiB/s, done.\n",
+      "Writing objects: 100% (3/3), 675 bytes | 675.00 KiB/s, done.\n",
       "Total 3 (delta 2), reused 0 (delta 0), pack-reused 0\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To github.com:pavankumarhm/Sentiment-Analysis-Assesment.git\n",
-      "   2242c44..7492407  master -> master\n",
+      "   7492407..bd2486d  master -> master\n",
       "branch 'master' set up to track 'origin/master'.\n"
      ]
     }
@@ -659,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af5084d9",
+   "id": "3fca55b9",
    "metadata": {},
    "outputs": [],
    "source": []
