--- a/Sentiment_Analysis_using_NLP.ipynb
+++ b/Sentiment_Analysis_using_NLP.ipynb
@@ -17,6 +17,7 @@
     "### - Preprocessing the data\n",
     "### - Converting Text(words) to Vectors using word2vec \n",
     "### - Using the word representations given by word2vec to feed a RNN and training the model\n",
+    "### - Evaluating the model\n",
     "### - Testing the model\n"
    ]
   },
@@ -103,7 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6edf459e",
+   "id": "38a8ebdf",
    "metadata": {},
    "outputs": [
     {
@@ -123,10 +124,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76c1596a",
+   "id": "529d7bf9",
    "metadata": {},
    "source": [
-    "## First, training a word2vec model (with the arguments that we want) on your training sentence. Store it into the `word2vec` variable."
+    "## First, training a word2vec model (with the arguments that we want) on your training sentence. Store it into the `word2vec` variable. "
    ]
   },
   {
@@ -141,6 +142,14 @@
     "word2vec = Word2Vec(sentences=X_train, vector_size=60, min_count=10, window=10)\n",
     "word2vec.save(\"word2vec.model\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbe104fe",
+   "metadata": {},
+   "source": [
+    "## Embedding the training and test sentences."
    ]
   },
   {
@@ -184,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dad9218",
+   "id": "462ac64d",
    "metadata": {},
    "source": [
     "### It's a good practice to check check the following for `X_train_pad` and `X_test_pad`:\n",
@@ -212,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9bd22afb",
+   "id": "b1597c4f",
    "metadata": {},
    "source": [
     "## Baseline Model"
@@ -249,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98991981",
+   "id": "6b975cfc",
    "metadata": {},
    "source": [
     "## The Model"
@@ -364,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "4b3da668",
+   "id": "8608c7b4",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c61cff0",
+   "id": "6cda3294",
    "metadata": {},
    "source": [
     "## Trained Word2Vec - Transfer Learning\n"
@@ -412,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8adb671c",
+   "id": "338b0264",
    "metadata": {},
    "source": [
     "### The accuracy of the above the baseline model, might be quite low. By improving the quality of the embedding we can Improve accuracy of the model."
@@ -420,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4207f51",
+   "id": "9ca07715",
    "metadata": {},
    "source": [
     "### Let's improve the quality of our embedding, instead of just loading a larger corpus, let's benefit from the embedding that others have learned. Because, the quality of an embedding, i.e. the proximity of the words, can be derived from different tasks. This is exactly what transfer learning is."
@@ -428,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4732dcf7",
+   "id": "482e5d12",
    "metadata": {},
    "source": [
     "### Listing all the different models available in the word2vec using gensim api."
@@ -627,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "c12a843d",
+   "id": "dc74baac",
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +674,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf17ddb1",
+   "id": "c52a93ca",
    "metadata": {},
    "source": [
     "### There is a significant improvement in the accuracy after Transfer learning."
@@ -673,7 +682,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b24ba0c1",
+   "id": "dafdbb98",
    "metadata": {},
    "source": [
     "## Testing the model for new review."
@@ -681,24 +690,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c9a5dcd0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "c2769e76",
+   "execution_count": 61,
+   "id": "3828fd55",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 1s 574ms/step\n",
-      "Positive review\n"
+      "1/1 [==============================] - 1s 1s/step\n",
+      "Negative review\n"
      ]
     }
    ],
@@ -714,7 +715,7 @@
     "model = load_model('my_model.h5')\n",
     "\n",
     "# Load the new movie review to test\n",
-    "new_review = \"I loved this movie! The plot was intriguing, the acting was superb, and the cinematography was stunning.\"\n",
+    "new_review = \"I loved this movie!.\"\n",
     "\n",
     "# Preprocess the new review\n",
     "new_review = text_to_word_sequence(new_review)\n",
@@ -722,14 +723,14 @@
     "for word in new_review:\n",
     "    if word in word2vec.wv:\n",
     "        word_embed = word2vec.wv[word]\n",
-    "        # Truncate or pad the word embedding to ensure it has length 100\n",
+    "        # Pad the word embedding to ensure it has length 100\n",
     "        word_embed = word_embed[:100] if len(word_embed) > 100 else np.pad(word_embed, (0, 100 - len(word_embed)))\n",
     "        new_review_embed.append(word_embed)\n",
     "new_review_pad = pad_sequences([new_review_embed], dtype='float32', padding='post', maxlen=200, truncating='post')\n",
     "\n",
     "# Predict the sentiment of the new review\n",
     "predicted_label = model.predict(new_review_pad)[0][0]\n",
-    "if predicted_label > 0.5:\n",
+    "if predicted_label == 1:\n",
     "    print(\"Positive review\")\n",
     "else:\n",
     "    print(\"Negative review\")\n",
@@ -738,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "1949d6e3",
    "metadata": {},
    "outputs": [],
@@ -748,28 +749,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "9de36bef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[master 8b90098] Sentiment Analysis using NLP\r\n",
+      " 1 file changed, 234 insertions(+), 133 deletions(-)\r\n"
+     ]
+    }
+   ],
    "source": [
     "!git commit -m 'Sentiment Analysis using NLP'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b7a31267",
+   "execution_count": 52,
+   "id": "94d3777d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Everything up-to-date\r\n"
+     ]
+    }
+   ],
    "source": [
-    "!git push -u origin master"
+    "!git push origin master"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "669c5adb",
+   "id": "7e338420",
    "metadata": {},
    "outputs": [],
    "source": []
