--- a/Sentiment_Analysis_using_NLP.ipynb
+++ b/Sentiment_Analysis_using_NLP.ipynb
@@ -103,28 +103,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "38a8ebdf",
+   "execution_count": 73,
+   "id": "02a3ae51",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1, 1, 0, ..., 1, 0, 0])"
+       "<module 'tensorflow_datasets' from '/Users/pavankumarhm/.pyenv/versions/3.10.6/envs/lewagon/lib/python3.10/site-packages/tensorflow_datasets/__init__.py'>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "y_test"
+    "tfds"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "529d7bf9",
+   "id": "4886eeb4",
    "metadata": {},
    "source": [
     "## First, training a word2vec model (with the arguments that we want) on your training sentence. Store it into the `word2vec` variable. "
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbe104fe",
+   "id": "d1a1aa10",
    "metadata": {},
    "source": [
     "## Embedding the training and test sentences."
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "462ac64d",
+   "id": "78f3d8b8",
    "metadata": {},
    "source": [
     "### It's a good practice to check check the following for `X_train_pad` and `X_test_pad`:\n",
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1597c4f",
+   "id": "4f95f658",
    "metadata": {},
    "source": [
     "## Baseline Model"
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b975cfc",
+   "id": "088445ae",
    "metadata": {},
    "source": [
     "## The Model"
@@ -373,7 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "8608c7b4",
+   "id": "c2b0a869",
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6cda3294",
+   "id": "0b4f452c",
    "metadata": {},
    "source": [
     "## Trained Word2Vec - Transfer Learning\n"
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "338b0264",
+   "id": "dba16da8",
    "metadata": {},
    "source": [
     "### The accuracy of the above the baseline model, might be quite low. By improving the quality of the embedding we can Improve accuracy of the model."
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ca07715",
+   "id": "08cc90b2",
    "metadata": {},
    "source": [
     "### Let's improve the quality of our embedding, instead of just loading a larger corpus, let's benefit from the embedding that others have learned. Because, the quality of an embedding, i.e. the proximity of the words, can be derived from different tasks. This is exactly what transfer learning is."
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "482e5d12",
+   "id": "2aee7df2",
    "metadata": {},
    "source": [
     "### Listing all the different models available in the word2vec using gensim api."
@@ -539,6 +539,111 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 71,
+   "id": "dbdca09e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[-0.084215 ,  0.69597  ,  0.28383  , ..., -0.54     ,\n",
+       "          0.58031  ,  0.46698  ],\n",
+       "        [-0.51533  ,  0.83186  ,  0.22457  , ..., -1.2024   ,\n",
+       "          1.1304   ,  0.3479   ],\n",
+       "        [ 0.43279  , -0.23361  , -0.25952  , ..., -0.078024 ,\n",
+       "          0.34868  , -0.071342 ],\n",
+       "        ...,\n",
+       "        [ 0.       ,  0.       ,  0.       , ...,  0.       ,\n",
+       "          0.       ,  0.       ],\n",
+       "        [ 0.       ,  0.       ,  0.       , ...,  0.       ,\n",
+       "          0.       ,  0.       ],\n",
+       "        [ 0.       ,  0.       ,  0.       , ...,  0.       ,\n",
+       "          0.       ,  0.       ]],\n",
+       "\n",
+       "       [[-0.54264  ,  0.41476  ,  1.0322   , ..., -1.2969   ,\n",
+       "          0.76217  ,  0.46349  ],\n",
+       "        [ 0.032257 ,  0.44344  ,  0.78909  , ..., -0.23929  ,\n",
+       "         -0.016464 ,  0.682    ],\n",
+       "        [-0.093337 ,  0.19043  ,  0.68457  , ..., -0.68175  ,\n",
+       "          0.28804  ,  0.54893  ],\n",
+       "        ...,\n",
+       "        [ 0.3621   ,  0.57864  ,  0.67622  , ..., -0.35775  ,\n",
+       "          0.96221  , -0.49299  ],\n",
+       "        [ 0.14701  , -0.047459 , -0.22247  , ..., -0.47303  ,\n",
+       "         -0.34344  ,  0.70323  ],\n",
+       "        [ 0.10797  ,  0.53256  ,  0.54202  , ..., -1.0022   ,\n",
+       "          1.2714   , -0.89424  ]],\n",
+       "\n",
+       "       [[-0.040623 ,  0.12911  ,  0.92652  , ..., -0.95842  ,\n",
+       "          1.0884   , -0.090499 ],\n",
+       "        [-0.1897   ,  0.050024 ,  0.19084  , ..., -0.39804  ,\n",
+       "          0.47647  , -0.15983  ],\n",
+       "        [ 0.018706 , -0.067668 ,  0.058515 , ...,  0.016806 ,\n",
+       "         -0.13764  ,  0.21182  ],\n",
+       "        ...,\n",
+       "        [ 0.38251  ,  0.14821  ,  0.60601  , ...,  0.058921 ,\n",
+       "          0.091112 ,  0.47283  ],\n",
+       "        [-0.44533  , -0.44969  ,  1.2393   , ...,  0.65856  ,\n",
+       "          0.79881  , -0.16019  ],\n",
+       "        [-0.090609 , -0.065264 ,  0.84485  , ..., -0.36786  ,\n",
+       "         -0.061716 , -0.1973   ]],\n",
+       "\n",
+       "       ...,\n",
+       "\n",
+       "       [[-0.14452  ,  0.56023  ,  0.2054   , ..., -0.36395  ,\n",
+       "          0.91609  ,  0.82095  ],\n",
+       "        [-0.1529   , -0.24279  ,  0.89837  , ..., -0.591    ,\n",
+       "          1.0039   ,  0.20664  ],\n",
+       "        [-0.038194 , -0.24487  ,  0.72812  , ..., -0.1459   ,\n",
+       "          0.8278   ,  0.27062  ],\n",
+       "        ...,\n",
+       "        [ 0.043244 , -0.47529  ,  0.15808  , ..., -0.28397  ,\n",
+       "         -0.29773  , -0.81148  ],\n",
+       "        [ 0.26164  ,  0.4472   , -0.096845 , ..., -0.4503   ,\n",
+       "          0.49525  , -0.20298  ],\n",
+       "        [-0.60306  , -0.12727  ,  0.04492  , ..., -0.039676 ,\n",
+       "          0.74202  ,  0.061783 ]],\n",
+       "\n",
+       "       [[-0.12201  ,  0.20465  ,  0.53192  , ..., -0.164    ,\n",
+       "         -0.41637  ,  0.66426  ],\n",
+       "        [-0.071953 ,  0.23127  ,  0.023731 , ..., -0.71895  ,\n",
+       "          0.86894  ,  0.19539  ],\n",
+       "        [-0.042895 ,  0.70671  ,  0.75316  , ..., -0.5423   ,\n",
+       "          0.11809  ,  0.39974  ],\n",
+       "        ...,\n",
+       "        [ 0.15711  ,  0.65606  ,  0.0021149, ..., -0.60615  ,\n",
+       "          0.71005  ,  0.41469  ],\n",
+       "        [-0.32721  ,  0.096446 ,  0.34244  , ..., -0.38165  ,\n",
+       "          0.43994  ,  0.24683  ],\n",
+       "        [-0.53086  ,  0.51404  ,  0.087599 , ..., -0.55397  ,\n",
+       "          0.56137  ,  0.39822  ]],\n",
+       "\n",
+       "       [[-0.57058  ,  0.44183  ,  0.70102  , ..., -0.66102  ,\n",
+       "          0.47197  ,  0.37253  ],\n",
+       "        [ 0.38251  ,  0.14821  ,  0.60601  , ...,  0.058921 ,\n",
+       "          0.091112 ,  0.47283  ],\n",
+       "        [ 0.13717  , -0.54287  ,  0.19419  , ..., -0.52057  ,\n",
+       "          0.25434  , -0.23759  ],\n",
+       "        ...,\n",
+       "        [ 0.       ,  0.       ,  0.       , ...,  0.       ,\n",
+       "          0.       ,  0.       ],\n",
+       "        [ 0.       ,  0.       ,  0.       , ...,  0.       ,\n",
+       "          0.       ,  0.       ],\n",
+       "        [ 0.       ,  0.       ,  0.       , ...,  0.       ,\n",
+       "          0.       ,  0.       ]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_test_pad_2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 42,
    "id": "cdee2b55",
    "metadata": {},
@@ -636,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "dc74baac",
+   "id": "1f6369f7",
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +779,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c52a93ca",
+   "id": "8db3868b",
    "metadata": {},
    "source": [
     "### There is a significant improvement in the accuracy after Transfer learning."
@@ -682,7 +787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dafdbb98",
+   "id": "7a4d098c",
    "metadata": {},
    "source": [
     "## Testing the model for new review."
@@ -690,16 +795,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "3828fd55",
+   "execution_count": 66,
+   "id": "a52123c6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 1s 1s/step\n",
-      "Negative review\n"
+      "1/1 [==============================] - 1s 539ms/step\n",
+      "Positive review\n"
      ]
     }
    ],
@@ -730,7 +835,7 @@
     "\n",
     "# Predict the sentiment of the new review\n",
     "predicted_label = model.predict(new_review_pad)[0][0]\n",
-    "if predicted_label == 1:\n",
+    "if predicted_label > 0.5:\n",
     "    print(\"Positive review\")\n",
     "else:\n",
     "    print(\"Negative review\")\n",
@@ -739,7 +844,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 78,
+   "id": "0d5fda30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tensorflow.keras import Sequential\n",
+    "from tensorflow.keras.layers import Masking, LSTM, Dense\n",
+    "\n",
+    "# Load the pre-trained Word2Vec model\n",
+    "word2vec_transfer = api.load(\"glove-wiki-gigaword-100\")\n",
+    "\n",
+    "# Define the function to embed a sentence with the pre-trained Word2Vec model\n",
+    "def embed_sentence_with_TF(word2vec, sentence):\n",
+    "    embedded_sentence = []\n",
+    "    for word in sentence:\n",
+    "        if word in word2vec:\n",
+    "            embedded_sentence.append(word2vec[word])\n",
+    "    return np.array(embedded_sentence)\n",
+    "\n",
+    "# Define the function to preprocess a new movie review\n",
+    "def preprocess_review(review):\n",
+    "    # Tokenize the review\n",
+    "    review = text_to_word_sequence(review)\n",
+    "    # Embed the review with the pre-trained Word2Vec model\n",
+    "    review_embedded = embed_sentence_with_TF(word2vec_transfer, review)\n",
+    "    # Pad the embedded review\n",
+    "    review_padded = pad_sequences([review_embedded], dtype='float32', padding='post', maxlen=200)\n",
+    "    return review_padded\n",
+    "\n",
+    "# Load the trained model\n",
+    "model = Sequential()\n",
+    "model.add(Masking())\n",
+    "model.add(LSTM(20, activation='tanh'))\n",
+    "model.add(Dense(15, activation='relu'))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "model.compile(loss='binary_crossentropy', optimizer='rmsprop', metrics=['accuracy'])\n",
+    "model = load_model('my_model.h5')\n",
+    "def predict_sentiment(review):\n",
+    "    # Preprocess the review\n",
+    "    review_padded = preprocess_review(review)\n",
+    "    # Predict the sentiment\n",
+    "    sentiment = model.predict(review_padded)[0][0]\n",
+    "    return sentiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "81d1214e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 21ms/step\n",
+      "Negative review\n"
+     ]
+    }
+   ],
+   "source": [
+    "review = \"This is the worst movie I have ever seen. The acting was terrible and the plot made no sense.\"\n",
+    "sentiment = predict_sentiment(review)\n",
+    "if sentiment > 0.5:\n",
+    "    print(\"Positive review\")\n",
+    "else:\n",
+    "    print(\"Negative review\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
    "id": "1949d6e3",
    "metadata": {},
    "outputs": [],
@@ -749,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 68,
    "id": "9de36bef",
    "metadata": {},
    "outputs": [
@@ -757,8 +933,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 8b90098] Sentiment Analysis using NLP\r\n",
-      " 1 file changed, 234 insertions(+), 133 deletions(-)\r\n"
+      "[master 473e813] Sentiment Analysis using NLP\r\n",
+      " 1 file changed, 55 insertions(+), 37 deletions(-)\r\n"
      ]
     }
    ],
@@ -768,26 +944,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "94d3777d",
+   "execution_count": 69,
+   "id": "473afee2",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Everything up-to-date\r\n"
+      "To github.com:pavankumarhm/Sentiment-Analysis-Assesment.git\r\n",
+      " \u001b[31m! [rejected]       \u001b[m main -> main (fetch first)\r\n",
+      "\u001b[31merror: failed to push some refs to 'github.com:pavankumarhm/Sentiment-Analysis-Assesment.git'\r\n",
+      "\u001b[m\u001b[33mhint: Updates were rejected because the remote contains work that you do\u001b[m\r\n",
+      "\u001b[33mhint: not have locally. This is usually caused by another repository pushing\u001b[m\r\n",
+      "\u001b[33mhint: to the same ref. You may want to first integrate the remote changes\u001b[m\r\n",
+      "\u001b[33mhint: (e.g., 'git pull ...') before pushing again.\u001b[m\r\n",
+      "\u001b[33mhint: See the 'Note about fast-forwards' in 'git push --help' for details.\u001b[m\r\n"
      ]
     }
    ],
    "source": [
-    "!git push origin master"
+    "!git push -u origin main"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e338420",
+   "id": "dd599dd6",
    "metadata": {},
    "outputs": [],
    "source": []
