Sentiment Analysis using NLP

--- a/Sentiment_Analysis_using_NLP.ipynb
+++ b/Sentiment_Analysis_using_NLP.ipynb
@@ -17,8 +17,11 @@
     "### - Preprocessing the data\n",
     "### - Converting Text(words) to Vectors using word2vec \n",
     "### - Using the word representations given by word2vec to feed a RNN and training the model\n",
-    "### - Evaluating the model\n",
-    "### - Testing the model\n"
+    "### - Evaluating the model and plotting the performance graphs\n",
+    "### - Improving the model by Transfer Learning\n",
+    "### - Comparing Accuracy of Baseline model, The model and Improved model.\n",
+    "### - Testing the model (predicting the model with new review)\n",
+    "\n"
    ]
   },
   {
@@ -96,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "6f046b5d",
+   "id": "1de51a4a",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17a6bd4d",
+   "id": "1aeb27aa",
    "metadata": {},
    "source": [
     "## First, training a word2vec model (with the arguments that we want) on your training sentence. Store it into the `word2vec` variable. "
@@ -138,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a07b3d2d",
+   "id": "cd936167",
    "metadata": {},
    "source": [
     "## Embedding the training and test sentences."
@@ -185,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "371b363c",
+   "id": "a5e7be40",
    "metadata": {},
    "source": [
     "### It's a good practice to check check the following for `X_train_pad` and `X_test_pad`:\n",
@@ -213,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78212158",
+   "id": "8806e733",
    "metadata": {},
    "source": [
     "## Baseline Model"
@@ -252,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "888a8c35",
+   "id": "220caaf9",
    "metadata": {},
    "source": [
     "## The Model"
@@ -368,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "b97e390b",
+   "id": "711f5974",
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba258589",
+   "id": "eae91b7f",
    "metadata": {},
    "source": [
     "## Trained Word2Vec - Transfer Learning\n"
@@ -416,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18b679c8",
+   "id": "7bfb7d0f",
    "metadata": {},
    "source": [
     "### The accuracy of the above the baseline model, might be quite low. By improving the quality of the embedding we can Improve accuracy of the model."
@@ -424,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0ed123d",
+   "id": "f3bec45a",
    "metadata": {},
    "source": [
     "### Let's improve the quality of our embedding, instead of just loading a larger corpus, let's benefit from the embedding that others have learned. Because, the quality of an embedding, i.e. the proximity of the words, can be derived from different tasks. This is exactly what transfer learning is."
@@ -432,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22dfaf01",
+   "id": "17063f95",
    "metadata": {},
    "source": [
     "### Listing all the different models available in the word2vec using gensim api."
@@ -623,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "f22fc9c8",
+   "id": "762034c1",
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e580d920",
+   "id": "cc341e2b",
    "metadata": {},
    "source": [
     "### There is a significant improvement in the accuracy after Transfer learning."
@@ -669,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e63ef76c",
+   "id": "db7feb2d",
    "metadata": {},
    "source": [
     "## Comparing Accuracy of Baseline model, The model and Improved model."
@@ -678,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "dc964614",
+   "id": "18ec7fe1",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "952889c9",
+   "id": "0ce88f63",
    "metadata": {},
    "source": [
     "## Predicting the model for new review."
@@ -711,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "ad05ff0d",
+   "id": "ddf33a02",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -757,15 +760,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
-   "id": "c67ec848",
+   "execution_count": 116,
+   "id": "92bdd2db",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 1s 673ms/step\n",
+      "1/1 [==============================] - 0s 17ms/step\n",
       "Negative review\n"
      ]
     }
@@ -781,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 117,
    "id": "1949d6e3",
    "metadata": {},
    "outputs": [],
@@ -791,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 118,
    "id": "9de36bef",
    "metadata": {},
    "outputs": [
@@ -799,8 +802,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 4a22313] Sentiment Analysis using NLP\r\n",
-      " 1 file changed, 215 insertions(+), 32 deletions(-)\r\n"
+      "[master 3f85d13] Sentiment Analysis using NLP\r\n",
+      " 1 file changed, 135 insertions(+), 261 deletions(-)\r\n"
      ]
     }
    ],
@@ -810,29 +813,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "3d2d2c9c",
+   "execution_count": 119,
+   "id": "008724a6",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enumerating objects: 32, done.\n",
-      "Counting objects: 100% (32/32), done.\n",
+      "Enumerating objects: 5, done.\n",
+      "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 8 threads\n",
-      "Compressing objects: 100% (32/32), done.\n",
-      "Writing objects: 100% (32/32), 140.22 KiB | 1.84 MiB/s, done.\n",
-      "Total 32 (delta 16), reused 4 (delta 0), pack-reused 0\n",
-      "remote: Resolving deltas: 100% (16/16), done.\u001b[K\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 150.80 KiB | 1.77 MiB/s, done.\n",
+      "Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
       "remote: This repository moved. Please use the new location:\u001b[K\n",
       "remote:   git@github.com:pavankumarhm/Sentiment-Analysis-for-MYM-Intern-Assesment.git\u001b[K\n",
-      "remote: \n",
-      "remote: Create a pull request for 'master' on GitHub by visiting:\u001b[K\n",
-      "remote:      https://github.com/pavankumarhm/Sentiment-Analysis-for-MYM-Intern-Assesment/pull/new/master\u001b[K\n",
-      "remote: \n",
       "To github.com:pavankumarhm/Sentiment-Analysis-Assesment.git\n",
-      " * [new branch]      master -> master\n",
+      "   4a22313..3f85d13  master -> master\n",
       "branch 'master' set up to track 'origin/master'.\n"
      ]
     }
@@ -844,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bc487ed",
+   "id": "699f6f10",
    "metadata": {},
    "outputs": [],
    "source": []
