--- a/Sentiment_Analysis_using_NLP.ipynb
+++ b/Sentiment_Analysis_using_NLP.ipynb
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "1de51a4a",
+   "id": "6983f446",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1aeb27aa",
+   "id": "3b55d60d",
    "metadata": {},
    "source": [
     "## First, training a word2vec model (with the arguments that we want) on your training sentence. Store it into the `word2vec` variable. "
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd936167",
+   "id": "16beb314",
    "metadata": {},
    "source": [
     "## Embedding the training and test sentences."
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5e7be40",
+   "id": "741e7929",
    "metadata": {},
    "source": [
     "### It's a good practice to check check the following for `X_train_pad` and `X_test_pad`:\n",
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8806e733",
+   "id": "498151a1",
    "metadata": {},
    "source": [
     "## Baseline Model"
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "220caaf9",
+   "id": "61d29e92",
    "metadata": {},
    "source": [
     "## The Model"
@@ -371,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "711f5974",
+   "id": "a5f127b7",
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eae91b7f",
+   "id": "7e3010ce",
    "metadata": {},
    "source": [
     "## Trained Word2Vec - Transfer Learning\n"
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bfb7d0f",
+   "id": "e9ab042c",
    "metadata": {},
    "source": [
     "### The accuracy of the above the baseline model, might be quite low. By improving the quality of the embedding we can Improve accuracy of the model."
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3bec45a",
+   "id": "8348e0d7",
    "metadata": {},
    "source": [
     "### Let's improve the quality of our embedding, instead of just loading a larger corpus, let's benefit from the embedding that others have learned. Because, the quality of an embedding, i.e. the proximity of the words, can be derived from different tasks. This is exactly what transfer learning is."
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17063f95",
+   "id": "4609b0c5",
    "metadata": {},
    "source": [
     "### Listing all the different models available in the word2vec using gensim api."
@@ -626,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 110,
-   "id": "762034c1",
+   "id": "d31cbfc9",
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc341e2b",
+   "id": "8a163c58",
    "metadata": {},
    "source": [
     "### There is a significant improvement in the accuracy after Transfer learning."
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db7feb2d",
+   "id": "50d33acf",
    "metadata": {},
    "source": [
     "## Comparing Accuracy of Baseline model, The model and Improved model."
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "18ec7fe1",
+   "id": "b2abc930",
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ce88f63",
+   "id": "5834e1bd",
    "metadata": {},
    "source": [
     "## Predicting the model for new review."
@@ -714,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "ddf33a02",
+   "id": "af8e31c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 116,
-   "id": "92bdd2db",
+   "id": "0dada498",
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 120,
    "id": "1949d6e3",
    "metadata": {},
    "outputs": [],
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 121,
    "id": "9de36bef",
    "metadata": {},
    "outputs": [
@@ -802,8 +802,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master 3f85d13] Sentiment Analysis using NLP\r\n",
-      " 1 file changed, 135 insertions(+), 261 deletions(-)\r\n"
+      "[master 2c14a02] Sentiment Analysis using NLP\r\n",
+      " 1 file changed, 39 insertions(+), 40 deletions(-)\r\n"
      ]
     }
    ],
@@ -813,8 +813,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "id": "008724a6",
+   "execution_count": 122,
+   "id": "3d53dd7b",
    "metadata": {},
    "outputs": [
     {
@@ -825,13 +825,13 @@
       "Counting objects: 100% (5/5), done.\n",
       "Delta compression using up to 8 threads\n",
       "Compressing objects: 100% (3/3), done.\n",
-      "Writing objects: 100% (3/3), 150.80 KiB | 1.77 MiB/s, done.\n",
-      "Total 3 (delta 1), reused 0 (delta 0), pack-reused 0\n",
-      "remote: Resolving deltas: 100% (1/1), completed with 1 local object.\u001b[K\n",
+      "Writing objects: 100% (3/3), 998 bytes | 998.00 KiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "remote: This repository moved. Please use the new location:\u001b[K\n",
       "remote:   git@github.com:pavankumarhm/Sentiment-Analysis-for-MYM-Intern-Assesment.git\u001b[K\n",
       "To github.com:pavankumarhm/Sentiment-Analysis-Assesment.git\n",
-      "   4a22313..3f85d13  master -> master\n",
+      "   3f85d13..2c14a02  master -> master\n",
       "branch 'master' set up to track 'origin/master'.\n"
      ]
     }
@@ -843,7 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "699f6f10",
+   "id": "b3de282b",
    "metadata": {},
    "outputs": [],
    "source": []
